main.tf
#Configure Azure provider for Terraform
terraform {
    required_providers {
      azurerm = {
        source = "hashicorp/azurerm"
        version = "~> 3.0.2"
      }
    }

    required_version = "value"
}

provider "azurerm" {
    features {}
  
}

resource "azurerm_resource_group" "rg" {
    name = "azure-resource"
    location = "eastus2"
}

#setup Virtual Networks for Azure load balanced VMs
resource "azurerm_virtual_network" "vnet" {
  name = "azurevm-vnet"
  address_space = ["10.0.0.0/16"]
  location = var.location
  resource_group_name = azurerm_resource_group.rg.name
}

#create subnet for Azure VMs
resource "azurerm_subnet" "subnet" {
  name = "azurevm-subnet"
  resource_group_name = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes =  ["10.0.1.0/24"]
}

#Create Network security groups for secure TCP connections
resource "azurerm_network_security_group" "securetcp" {
  name                = "secure-network-group"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "web"
    priority                   = 1008
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "10.0.1.0/24"
  }
}

#Associate the security group to the VMs subnet
resource "azurerm_subnet_network_security_group_association" "securetcp_assicaition" {
  subnet_id = azurerm_subnet.subnet.id
  network_security_group_id = azurerm_network_security_group.securetcp.id
  
}

#Create Public IP for Laod Balancing
resource "azurerm_public_ip" "public_ip" {
  name = "public-ip"
  location = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method = "Static"
  sku = "Standard"
  
}

#Create NIC for Azure VMs
resource "azurerm_network_interface" "nic" {
  count = 2
  name = "azurevm-nic-${count.index}"
  location = var.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name = "ipaddr${count.index}"
    subnet_id = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    primary = true
  }
}

#Configure Azure Ubuntu VMs
resource "azurerm_linux_virtual_machine" "vm" {
  count = 2
  name = "azurevm-vm"
  location = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  network_interface_ids = [azurerm_network_interface.nic[count.index].id]
  size = "Standard_B1s"

  admin_ssh_key {
    username = "admin"
    public_key = file("~/.ssh/id_rsa.pub")
  }

  os_disk {
    caching = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer = "0001-com-ubuntu-server-jammy"
    sku = "22_04-lts"
    version = "latest"
  }
  admin_username = var.vm_admin_username
  admin_password = var.vm_admin_password
  disable_password_authentication = false
  provision_vm_agent = true
  allow_extension_operations = true #Allows extensions to run in VM
}

#Deploy NGINX Onto VMs utilising a bash script to update apt and deploy NGINX
resource "azurerm_virtual_machine_extension" "deploy_nginx" {
  name = "deploy-nginx"
  virtual_machine_id = azurerm_linux_virtual_machine.vm.id
  publisher = "Microsoft.Azure.Extensions"
  type = "CustomScript"
  type_handler_version = "2.1"
  settings = <<SETTINGS
  {
    "commandToExecute": "sudo apt update && sudo apt install -y nginx && sudo systemctl enable nginx && sudo systemctl start nginx"
  }
  SETTINGS
}

#Create public load balancers and health probe to ensure VMs stay up
resource "azurerm_lb" "web_load_balancer" {
  name = "azure_web_load_balancer"
  location = var.location
  resource_group_name = azurerm_resource_group.rg.name
  sku = "Standard"

  frontend_ip_configuration {
    name = "lb_frontend_ip"
    public_ip_address_id = azurerm_public_ip.public_ip.id
  }
}

#Backend address pool for load balancer
resource "azurerm_lb_backend_address_pool" "backend_pool" {
  loadbalancer_id = azurerm_lb.web_load_balancer.id
  name = "lb-pool"
}

resource "azurerm_lb_probe" "health_probe" {
  loadbalancer_id = azurerm_lb.web_load_balancer.id
  name = "lb-probe"
  port = 80
  
}

#Create Load balancing rules
#This forwards the frontend traffic to the backend pool created above
resource "azurerm_lb_rule" "lb_rule" {
  loadbalancer_id = azurerm_lb.web_load_balancer.id
  name = "loadbalancing-rule"
  protocol = "Tcp"
  frontend_port = 80
  backend_port = 80
  disable_outbound_snat = true #Disables soure NAT for outbound traffic
  frontend_ip_configuration_name = azurerm_lb.web_load_balancer.frontend_ip_configuration.name
  probe_id = azurerm_lb_probe.health_probe.id
  backend_address_pool_ids = [azurerm_lb_backend_address_pool.backend_pool.id]
}

#Create outbound load balancing rule
resource "azurerm_lb_outbound_rule" "lb_outbound_rule" {
  name = "outbound-lb-rule"
  loadbalancer_id = azurerm_lb.web_load_balancer.id
  protocol = "Tcp"
  backend_address_pool_id = azurerm_lb_backend_address_pool.backend_pool.id

  frontend_ip_configuration {
    name = azurerm_lb.web_load_balancer.frontend_ip_configuration.name
  }
}
